# NL2TAP-user-study

./: .gitignore  README.md  launch_orchestrator.bat  pyproject.toml  requirements.txt  test_flowchart.html  test_flowchart_report.html  test_mermaid.html  test_semantic.html
.claude/: settings.local.json
data/ifttt_catalog/: actions.json  services.json
data/test/: generations_all_models_base_only_intent_llama2.jsonl  generations_all_models_base_only_intent_qwen.jsonl  generations_all_models_base_zs_codestral.jsonl  generations_all_models_base_zs_llama2.jsonl  temp
notebooks/analysis/: compute_metris.ipynb  debug_c2_flowchart.ipynb  debug_c2_flowchart_executed.ipynb  embedding_visualization.ipynb  extraction.ipynb  flowchart_visual_test.ipynb  generations_all_models_base_only_intent_deepseek (1).jsonl  split.ipynb  study_set_applets.json
notebooks/augmentation/: description_generation.ipynb  filter_generation.ipynb
notebooks/fine_tuning/: fine_tuning.ipynb
notebooks/test/: eval.ipynb  eval_studio.ipynb  eval_studio_2.ipynb  filter_code_figures_notebook.ipynb  ifttt_metrics.ipynb  metrics.ipynb  results.ipynb  survey.csv  table_token_metrics.tex  tasks.csv  usab.ipynb
results/: user_ne_study_results - Copia.jsonl  user_ne_study_results.jsonl  user_study_results.jsonl
scripts/: enrich_study_set.py  serve_models.sh
src/: test.py  test_flowchart_batch.py  test_modules_on_dataset.py  test_refactor_quick.py
src/analysis/: code_embeddings.py  comparative.py  ft_classification.py  (+5 more)
tests/: remote_test.py  test_concurrent_users.py  test_e2e_scenarios.py
(+44 files in other folders)
